--- a/Projects/Core/com.test.example.ui.feature/pom.xml
+++ b/Projects/Core/com.test.example.ui.feature/pom.xml
@@ -3,10 +3,68 @@
   <groupId>com.test.example.ui.feature</groupId>
   <artifactId>com.test.example.ui.feature</artifactId>
   <packaging>eclipse-feature</packaging>
-  <parent>
-  	<groupId>com.test.example.ui.build</groupId>
-  	<artifactId>com.test.example.ui.build</artifactId>
-  	<version>1.0.0-SNAPSHOT</version>
-  	<relativePath>../com.test.example.ui.build</relativePath>
-  </parent>
+  
+  <version>1.0.0-SNAPSHOT</version>
+  	<properties>
+		<tycho-version>0.20.0</tycho-version>
+	</properties>
+
+	<repositories>
+		<!-- configure p2 repository to resolve against -->
+		<repository>
+			<id>eclipse-project-luna</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/releases/luna</url>
+		</repository>
+	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<!-- enable the Tycho build extension -->
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			 <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
+                <version>${tycho-version}</version>
+
+                <configuration>
+                    <!-- This defines the target definition file -->
+
+                    <environments>
+                        <environment>
+                            <os>linux</os>
+                            <ws>gtk</ws>
+                            <arch>x86</arch>
+                        </environment>
+                        <environment>
+                            <os>linux</os>
+                            <ws>gtk</ws>
+                            <arch>x86_64</arch>
+                        </environment>
+                        <environment>
+                            <os>win32</os>
+                            <ws>win32</ws>
+                            <arch>x86</arch>
+                        </environment>
+                        <environment>
+                            <os>win32</os>
+                            <ws>win32</ws>
+                            <arch>x86_64</arch>
+                        </environment>
+                        <environment>
+                            <os>macosx</os>
+                            <ws>cocoa</ws>
+                            <arch>x86_64</arch>
+                        </environment>
+                    </environments>
+                </configuration>
+            </plugin>
+			
+		</plugins>
+	</build>
 </project>
