--- a/Projects/Project_A/com.test.example.ui.build/pom.xml
+++ b/Projects/Project_A/com.test.example.ui.build/pom.xml
@@ -6,12 +6,14 @@
   	<groupId>ExampleGroupId</groupId>
   	<artifactId>com.test.example.general.configuration</artifactId>
   	<version>1.0.0-SNAPSHOT</version>
-  	<relativePath>../com.test.example.general.configuration</relativePath>
+  	<relativePath>../../BuildConfiguration/com.test.example.general.configuration</relativePath>
   </parent>
   <groupId>com.test.example.ui.build</groupId>
   <modules>
-  	<module>../com.test.example.ui</module>
-  	<module>../com.test.example.ui.feature</module>
+  	
+  	
   	<module>../com.test.example.projecta.product</module>
+  	<module>../../Core/com.test.example.ui</module>
+  	<module>../../Core/com.test.example.ui.feature</module>
   </modules>
 </project>
